[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cftools"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "CRWayman", email = "callum.wayman@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2.0",
  "numpy",
  "pandas",
  "PyYAML",
  "matplotlib",
  "scipy"
]

[project.urls]
Documentation = "https://github.com/CRWayman/cftools#readme"
Issues = "https://github.com/CRWayman/cftools/issues"
Source = "https://github.com/CRWayman/cftools"

[tool.hatch.version]
path = "src/cftools/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cftools tests}"

[tool.coverage.run]
source_pkgs = ["cftools", "tests"]
branch = true
parallel = true
omit = [
  "src/cftools/__about__.py",
]

[tool.coverage.paths]
cftools = ["src/cftools", "*/cftools/src/cftools"]
tests = ["tests", "*/cftools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default]
python = "/Users/cwayman/miniforge3/envs/cftools/bin/python"
dependencies = [
  "pydantic>=2.0",
  "numpy",
  "pandas",
  "PyYAML"
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]